--- a/index.html
+++ b/index.html
@@ -34,21 +34,24 @@
         search
       </button>
     </div>
+
+    <div class="text-center my-4 text-danger p-3">
+      <h4 id="error-message">Total-result: 0</h4>
+    </div>
+
     <!-- book search result -->
     <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4">
-      <div class="col">
+      <!-- <div class="col">
         <div class="card h-100">
-          <!-- <img src="..." class="card-img-top" alt="..." /> -->
+          <img src="..." class="card-img-top" alt="..." />
           <div class="card-body">
-            <h5 class="card-title text-success">Card title</h5>
-            <p class="card-text">
-              This is a longer card with supporting text below as a natural
-              lead-in to additional content. This content is a little bit
-              longer.
-            </p>
+            <h4 class="card-title text-success">book name:</h4>
+            <h6 class="card-title">author name:</h6>
+            <h6 class="card-title">publisher:</h6>
+            <h6 class="card-title">1st published:</h6>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
 
     <!-- javascript -->
